# Codel

./: CMakeLists.txt  README.md
lib/: Codel.h  adapter.cpp  adapter.h
src/: Codel.h  adapter.cpp  adapter.h  main.cpp  massif.out.22767
